DTS-46813: fixed cycle time json